--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest --watch-All"
   },
   "dependencies": {
-    "react": "^18.0.0-rc.0",
+    "react": "17.0.1",
     "react-native": "ˆ0.64.4",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-linear-gradient": "^2.5.6",
@@ -20,16 +20,15 @@
     "@babel/runtime": "^7.12.5",
     "@testing-library/jest-native": "^4.0.1",
     "@testing-library/react-native": "^7.2.0",
-    "@types/jest": "29.3.1",
-    "@types/react": "^18.0",
+    "@types/jest": "^26.0.23",
+    "@types/react": "^17.0.13",
     "@types/react-native": "^0.64.10",
     "@types/react-native-vector-icons": "^6.4.7",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
-    "jest": "29.3.1",
-    "jest-environment-jsdom": "29.3.1",
+    "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "^18.0.0-rc.0",
+    "react-test-renderer": "17.0.1",
     "typescript": "^4.3.5"
   },
   "overrides": {
