--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-native": "ˆ0.64.4",
+    "react-native": "^0.64.4",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-vector-icons": "^8.1.0"
